<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recordatorios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carolina.tumascota.Recordatorios">


    <TextView
        android:id="@+id/horacomida"
        android:textSize="@dimen/registroletra"

        android:text="@string/horacomida"
        android:layout_width="@dimen/anocherecordatorio"
        android:layout_height="wrap_content" />
    <EditText

        android:hint="@string/horacomida"
        android:layout_toRightOf="@id/horacomida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/necesidades"
        android:textSize="@dimen/registroletra"
        android:text="@string/necesidades"
        android:layout_below="@id/horacomida"
        android:layout_width="@dimen/anocherecordatorio"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/necesidades"
        android:layout_toRightOf="@id/necesidades"
        android:layout_below="@id/horacomida"
        android:layout_width="@dimen/anocherecordatorio"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/veterinario"
        android:textSize="@dimen/registroletra"
        android:text="@string/citaveterinaria"
        android:layout_below="@id/necesidades"
        android:layout_width="@dimen/anocherecordatorio"
        android:layout_height="wrap_content" />
    <EditText
        android:text="@string/citaveterinaria"
        android:layout_toRightOf="@id/veterinario"
        android:layout_below="@id/necesidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:text="@string/enviar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>
