<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mi_pets"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carolina.tumascota.MiPets">


    <TextView
        android:id="@+id/nombremipest"
        android:textSize="@dimen/registroletra"
        android:text="@string/nombre"
        android:layout_width="@dimen/anchoregistroTex"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center_horizontal"
        android:text="daniel"
        android:layout_toRightOf="@id/nombremipest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/descripcionpets"
        android:textSize="@dimen/registroletra"
        android:layout_below="@id/nombremipest"
        android:text="@string/descripcion"
        android:layout_width="@dimen/anchoregistroTex"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center_horizontal"
        android:text="es un perro grande"
        android:layout_below="@id/nombremipest"
        android:layout_toRightOf="@id/descripcionpets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tiposangre"
        android:textSize="@dimen/registroletra"
        android:layout_below="@id/descripcionpets"

        android:text="@string/tiposangre"
        android:layout_width="@dimen/anchoregistroTex"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/tiposangre2"
        android:text="@string/tiposangre"
        android:layout_toRightOf="@id/tiposangre"
        android:layout_below="@id/descripcionpets"
        android:textSize="@dimen/registroletra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/fechanacimiento"
        android:textSize="@dimen/registroletra"
        android:layout_below="@id/tiposangre"
        android:text="@string/fechanacimiento"
        android:layout_width="@dimen/anchoregistroTex"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center_horizontal"
        android:text="@string/fechanacimiento"
        android:layout_toRightOf="@id/fechanacimiento"
        android:layout_below="@+id/tiposangre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/raza"

        android:textSize="@dimen/registroletra"
        android:layout_below="@id/fechanacimiento"

        android:text="@string/raza"
        android:layout_width="@dimen/anchoregistroTex"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center_horizontal"
        android:text="@string/raza"
        android:layout_toRightOf="@id/raza"
        android:layout_below="@id/fechanacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:text="PROGRAMAR"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
