<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/dog"
    tools:context="com.example.carolina.tumascota.Registro">

    <TextView

        android:textColor="@color/colorblanko"
        android:textSize="@dimen/registroletra"
        android:id="@+id/nombre"
        android:gravity="center_horizontal"
        android:text="@string/nombre"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
    <EditText

        android:textColor="@color/colorblanko"
        android:layout_marginTop="-10dp"
        android:id="@+id/nombreedit"
        android:textSize="@dimen/registroletra"
        android:gravity="center_horizontal"
       android:hint="nombre"
        android:layout_toRightOf="@id/nombre"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
       />

    <TextView

        android:textColor="@color/colorblanko"
        android:layout_marginTop="30dp"

        android:textSize="@dimen/registroletra"
        android:gravity="center_horizontal"
        android:layout_below="@id/nombre"
        android:text="@string/descripcion"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/descripcion" />

<EditText

    android:id="@+id/nombredescripcion"
    android:layout_marginTop="10sp"
    android:textColor="@color/colorblanko"
    android:layout_below="@id/nombreedit"
    android:textSize="@dimen/registroletra"
    android:gravity="center_horizontal"
    android:hint="@string/descripcion"
    android:layout_toRightOf="@id/descripcion"

    android:layout_width="230dp"
    android:layout_height="wrap_content" />





    <TextView

        android:layout_marginTop="50sp"
        android:textColor="@color/colorblanko"
        android:gravity="center_horizontal"
        android:id="@+id/tiposangre"
        android:textSize="@dimen/registroletra2"
        android:text="@string/tiposangre"
        android:layout_below="@id/descripcion"
        android:layout_width="130dp"
        android:layout_height="wrap_content" />
    <EditText

        android:id="@+id/editsangre"
        android:layout_marginTop="50sp"
        android:textColor="@color/colorblanko"
        android:gravity="center_horizontal"
        android:hint="@string/tiposangre"
        android:layout_toRightOf="@id/tiposangre"
        android:layout_below="@id/descripcion"
        android:textSize="@dimen/registroletra"
        android:layout_width="230dp"
        android:layout_height="wrap_content" />





    <TextView
        android:layout_marginTop="70sp"
        android:textColor="@color/colorblanko"
        android:gravity="center_horizontal"
        android:layout_below="@id/tiposangre"
        android:id="@+id/fechanacimiento"
        android:textSize="@dimen/registroletra"

        android:text="@string/fechanacimiento"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editfechanacimiento"
        android:layout_marginTop="70sp"
        android:gravity="center_horizontal"
        android:hint="Fecha Nacimiento"
        android:layout_toRightOf="@id/fechanacimiento"
        android:layout_below="@id/tiposangre"

        android:layout_width="230dp"
        android:layout_height="wrap_content" />



    <TextView
        android:layout_marginTop="65sp"
        android:textColor="@color/colorblanko"

        android:gravity="center_horizontal"
        android:textSize="@dimen/registroletra"
        android:layout_below="@id/fechanacimiento"
        android:text="@string/raza"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editraza"
        android:gravity="center_horizontal"
        android:layout_marginTop="60sp"
        android:hint="Raza"
        android:layout_toRightOf="@id/tiposangre"
        android:layout_below="@id/fechanacimiento"
        android:layout_width="230dp"
        android:layout_height="wrap_content" />

    <Button
       android:id="@+id/registrar"
        android:text="Registrar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</RelativeLayout>
